--- a/app.json
+++ b/app.json
@@ -24,7 +24,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/LexendExa.ttf"]
+        }
+      ]
     ]
   }
 }
