--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.14",
+    "expo-blur": "^13.0.2",
+    "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-secure-store": "~13.0.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
