--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.74.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-dev-client": "~4.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
