final:proviewBuildforAndriod&IOS

--- a/app.json
+++ b/app.json
@@ -4,24 +4,32 @@
     "slug": "auth_project",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "icon": "./assets/logo_favicon_icon.png",
+    "userInterfaceStyle": "dark",
+    
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/logo_favicon_icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#101010"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "userInterfaceStyle": "automatic",
+      "bundleIdentifier": "authProject"
     },
     "android": {
+      "userInterfaceStyle": "automatic",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "foregroundImage": "./assets/logo_favicon_icon.png",
+        "backgroundColor": "#101010"
+      },
+      "package": "com.samuel_chost.auth_project"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/logo_favicon_icon.png"
     },
     "plugins": [
       "expo-secure-store",
